syntax = "proto3";

package auth;

option go_package = './auth';

service authentication {
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
    rpc Login (LoginRequest) returns (LoginResponse) {}
    rpc Generate (GenerateRequest) returns (GenerateResponse) {}
    rpc Verify (VerifyRequest) returns (VerifyResponse) {}
    rpc Validate (ValidateRequest) returns (ValidateResponse) {}
    rpc VerifyJwt (VerifyJwtRequest) returns (VerifyJwtResponse) {}
    rpc Disable (DisableRequest) returns (DisableResponse) {}
    rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
}

message User {
    string email = 1;
    bytes id = 2;
    string name = 3;
    bool otp_enabled = 4;
    bool otp_verified = 5;
}

message RegisterRequest {
    string email = 1;
    string name = 2;
    string password = 3;
}

message RegisterResponse {
    string error = 1;
    bytes user_id = 2;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int64 status = 1;
    string token = 2;
}

message GenerateRequest {}

message GenerateResponse {
    bytes base32 = 1;
    string otp_url = 2;
}

message VerifyRequest {
    string token = 2;
}

message VerifyResponse {
    bool otp_verified = 1;
    User user = 2;
}

message VerifyJwtRequest {
    string token = 1;
}

message VerifyJwtResponse {
    bool verified = 1;
    User user = 2;
}

message ValidateRequest {
    string token = 2;
}

message ValidateResponse {
    bool otp_valid = 1;
}

message DisableRequest {}

message DisableResponse {
    bool otp_disabled = 1;
    User user = 2;
}

message ServiceStatusRequest {}

message ServiceStatusResponse {
    int64 code = 1;
    string err = 2;
}