syntax = "proto3";

package watermark;

option go_package = "watermark-service/api/v1/protos/watermark";

import "picture/picturesvc.proto";

service watermark {
    rpc Get (GetRequest) returns (GetResponse) {}
    rpc Remove (RemoveRequest) returns (RemoveResponse) {}
    rpc Add (AddRequest) returns (AddResponse) {}
    rpc ServiceStatus (ServiceStatusRequest) returns (ServiceStatusResponse) {}
}

message Document {
    int32 author_id = 1;
    bytes ticket_id = 2;
    string title = 3;
    string image_url = 4;
}

message GetRequest {
    message Filters {
        string key = 1;
        string value = 2;
    }
    repeated Filters filters = 1;
}

message GetResponse {
    repeated Document documents = 1;
    string err = 2;
}

message RemoveRequest {
    string ticketID = 1;
}

message RemoveResponse {
    int64 code = 1;
    string err = 2;
}

message AddRequest {
    optional picture.Image logo = 1;
    picture.Image image = 2;
    string text = 3;
    bool fill = 4;
    picture.Position pos = 5;
}

message AddResponse {
    string ticketID = 1;
    string err = 2;
}

message ServiceStatusRequest {}

message ServiceStatusResponse {
    int64 code = 1;
    string err = 2;
}